deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app-1
  template:
    metadata:
      labels:
        app: demo-app-1
    spec:
      containers:
        - name: demo-app-1
          image: 992382508838.dkr.ecr.us-east-1.amazonaws.com/demo-app:app1-latest
          ports:
            - containerPort: 3000
