service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-1-service
spec:
  selector:
    app: demo-app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
